# bmi-topography

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  CREDITS.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  environment.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-test-ci.yml  docs.yml  format.yml  lint.yml  test-notebooks.yml  test.yml
bmi_topography/: __init__.py  _version.py  api_key.py  bbox.py  bmi.py  cli.py  config.py  errors.py  topography.py
docs/: requirements.txt
docs/source/: CHANGES.md  CHANGES.rst  CODE-OF-CONDUCT.md  CODE-OF-CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  changelog.rst  conf.py  index.md  index.rst
docs/source/_templates/: links.html  sidebarintro.html
docs/source/api/: bmi_topography.rst  index.rst  modules.rst
examples/: README-bmi-topography.ipynb  README.ipynb  README.md  bmi-topography.ipynb  bmi-topography_config_ex.sh  bmi-topography_ex.py  bmi-topography_ex.sh  config.yaml  readme_example.py  topography.ipynb
tests/: __init__.py  test_api_key.py  test_bbox.py  test_cli.py  test_config.py  test_io.py  test_topography.py
tests/data/: SRTMGL3_36.738884_-120.168457_38.091337_-118.465576.tif  config.yaml
