[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-topography"
description = "Fetch and cache land elevation data from OpenTopography"
authors = [
  {name = "Mark Piper", email = "mark.piper@colorado.edu"},
]
maintainers = [
  {name = "Mark Piper", email = "mark.piper@colorado.edu"},
  {name = "Eric Hutton", email = "eric.hutton@colorado.edu"},
]
keywords = [
  "bmi",
  "srtm",
  "alos",
  "nasadem",
  "copernicus",
  "topography",
  "elevation",
  "dem",
  "data",
]
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
]
requires-python = ">=3.7"
dependencies = [
  "requests",
  "numpy",
  "click",
  "pyyaml",
  "xarray",
  "rioxarray",
  "bmipy",
]
dynamic = ["readme", "version"]

[project.urls]
Homepage = "https://github.com/csdms/bmi-topography"
Documentation = "https://bmi-topography.readthedocs.io/"
Repository = "https://github.com/csdms/bmi-topography"
Changelog = "https://github.com/csdms/bmi-topography/blob/main/CHANGES.md"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "nox",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]
testing = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "coveralls",
]
docs = [
  "sphinx",
  "recommonmark",
  "pandoc",
]
examples = [
  "matplotlib",
]

[project.scripts]
bmi-topography = "bmi_topography.cli:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CREDITS.md", "LICENSE.md"], content-type = "text/markdown"}
version = {attr = "bmi_topography._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bmi_topography*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["bmi_topography", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
  --ignore setup.py
  --tb native
  --strict
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
