[metadata]
name = bmi-topography
version = 0.2
author = Mark Piper
author_email = mark.piper@colorado.edu
description = Fetch and cache NASA SRTM land elevation data
long_description = file: README.md, CHANGES.md, CONTRIBUTING.md, LICENCE.md
long_description_content_type = text/markdown
keywords = bmi, srtm, topography, elevation, dem, data
license = MIT License
url = https://github.com/csdms/bmi_topography
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    requests
    numpy
    click
    pyyaml
    rasterio
    xarray
    bmipy

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    bmi-topography = bmi_topography.cli:main

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88

[zest.releaser]
tag-format = v{version}
